basicMethodsAdded